添加win pdf工具 wps破解版

--- a/windows相关/浏览器/好用插件.md
+++ b/windows相关/浏览器/好用插件.md
@@ -18,3 +18,17 @@
 
 3.夜间助手
 
+
+
+# 3.阅读
+
+1. 阅读插件：
+
+   1. 简悦 - SimpRead（付费）
+
+      ![image-20210322171927483](好用插件图片/image-20210322171927483.png)
+
+      标注、切换主题等
+
+   2. Clearly Reader
+
