--- a/k8s/1.入门-环境搭建.md
+++ b/k8s/1.入门-环境搭建.md
@@ -1,5 +1,9 @@
 # 环境搭建
 
+> 参考文档：
+>
+> https://blog.51cto.com/3241766/2405624
+
 ## centos
 
 ### 单机模式
@@ -12,9 +16,9 @@ k8s-master、k8s-node01、k8s-node02、harbor
 
 |               |      |        |
 | ------------- | ---- | ------ |
-| 10.202.83.203 |      |        |
-| 10.202.41.81  |      |        |
-| 10.202.41.77  |      |        |
+| 10.202.41.81  |      | master |
+| 10.202.41.77  |      | node1  |
+| 10.202.41.154 |      | node2  |
 | 10.202.41.81  | 7001 | harbor |
 
 source切换
