--- a/k8s/1.入门-环境搭建.md
+++ b/k8s/1.入门-环境搭建.md
@@ -37,4 +37,78 @@ EOF
 >
 > https://mirrors.aliyun.com/kubernetes/apt/
 
-### 机器模式
+### 集群模式
+
+### 使用rancher搭建
+
+> 参考文档：https://rancher.com/docs/rancher/v1.6/zh/quick-start-guide/
+>
+> 版本：Rancher-2.5.0
+>
+> 前置条件：docker安装
+
+1.前置安装
+
+Docker安装
+
+> 虽然Rancher的安装方法有好几种，但是使用Docker来安装无疑是最简单！没有安装Docker的朋友可以先安装下。
+
+- 安装`yum-utils`：
+
+```bash
+yum install -y yum-utils device-mapper-persistent-data lvm2
+```
+
+- 为yum源添加docker仓库位置：
+
+```bash
+yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+```
+
+- 安装Docker：
+
+```bash
+yum install docker-ce
+```
+
+- 启动Docker：
+
+```bash
+systemctl start docker
+```
+
+2.Rancher安装
+
+> 安装完Docker之后，我们就可以开始安装Rancher了。Rancher已经内置K8S，无需再额外安装。就像我们安装好Minikube一样，K8S直接就内置了。
+
+- 首先下载Rancher镜像；
+
+```bash
+docker pull rancher/rancher:v2.5-head
+```
+
+- 下载完成后运行Rancher容器，Rancher运行起来有点慢需要等待几分钟：
+
+```bash
+docker run -p 80:80 -p 443:443 --name rancher \
+--privileged \
+--restart=unless-stopped \
+-d rancher/rancher:v2.5-head
+```
+
+3.访问校验
+
+运行完成后就可以访问Rancher的主页了，第一次需要设置管理员账号密码，访问地址：
+
+![image-20210325173226339](1.入门-环境搭建图片/image-20210325173226339.png)
+
+4.快速使用
+
+> 部署pg为例子
+
+选择Local-Default-资源-工作负载
+
+![image-20210325173349060](1.入门-环境搭建图片/image-20210325173349060.png)
+
+点击部署服务
+
