--- a/CentOS系统的学习/常见命令与设置.md
+++ b/CentOS系统的学习/常见命令与设置.md
@@ -18,3 +18,6 @@ source /etc/profile
 ![image-20210324141736701](常见命令与设置图片/image-20210324141736701.png)
 
 > 参考样式：https://www.cnblogs.com/lienhua34/p/5018119.html
+
+2.find命令跳过目录
+
