--- a/k8s/1.入门-环境搭建.md
+++ b/k8s/1.入门-环境搭建.md
@@ -37,6 +37,14 @@ EOF
 >
 > https://mirrors.aliyun.com/kubernetes/apt/
 
+
+
+> 参考部署文档：
+>
+> https://www.cnblogs.com/xiao987334176/p/11899321.html
+>
+> 
+
 ### 集群模式
 
 ### 使用rancher搭建
