每日算法2到

--- a/数据结构与算法/leetcode/算法刷题.md
+++ b/数据结构与算法/leetcode/算法刷题.md
@@ -1,4 +1,6 @@
-1.两数之和
+# LeetCode
+
+## 1.两数之和
 
 ```java
 /**
@@ -36,7 +38,7 @@
 
 
 
-5.最长回文字串
+## 5.最长回文字串
 
 ```java
 /**
@@ -99,6 +101,118 @@
             map.put(split[i], i);
         }
         return s.substring(start, end);
+    }
+```
+
+## 8.字符串转换整数 (atoi)
+
+```java
+/**
+     * 字符串转换整数 (atoi)
+     * https://leetcode-cn.com/problems/string-to-integer-atoi/
+     * @param args
+     */
+    public static void main(String[] args) {
+        System.out.println("-0012a42"+"\t\t"+myAtoi("-0012a42"));
+        System.out.println(myAtoi("42"));//42
+        System.out.println(myAtoi("   -42"));//-41
+        System.out.println(myAtoi("4193 with words"));//4193
+        System.out.println(myAtoi("words and 987"));//0
+        System.out.println(myAtoi("-91283472332"));//-2147483648
+        System.out.println(myAtoi("-+12"));//0
+        System.out.println(myAtoi("+12"));//12
+        System.out.println(myAtoi("+-12"));//0
+        System.out.println(myAtoi("00000-42"));//0
+        System.out.println(myAtoi("20000000000000000000"));
+        System.out.println(myAtoi("0000000000012345678"));
+        System.out.println(myAtoi(RandomUtil.randomNumbers(15)));
+        System.out.println(myAtoi(RandomUtil.randomString(RandomUtil.randomInt(10, 30))));
+    }
+
+    /**
+     * 解答成功: 执行耗时:4 ms,击败了29.84% 的Java用户 内存消耗:38.4 MB,击败了79.04% 的Java用户
+     * @param s
+     * @return
+     */
+    public static int myAtoi(String s) {
+        if (s == null) return 0;
+        // 读入字符串并丢弃无用的前导空格
+        String trim = s.trim();
+
+        if (trim.length() > 1 && trim.charAt(0) == '+' && !trim.contains("-")) {
+            trim = trim.substring(1);
+        }
+        StringBuilder temp = new StringBuilder();
+        for (int i = 0; i < trim.length(); i++) {
+            if ('0' <= trim.charAt(i) && trim.charAt(i) <= '9') {
+                temp.append(trim.charAt(i));
+            } else if (trim.charAt(i) == '-') {
+                if (i != 0) break;
+                temp.append(trim.charAt(i));
+            } else {
+                break;
+            }
+        }
+        String s1 = temp.toString();
+
+        if (s1.equals("") || s1.equals("-")) return 0;
+        try {
+            return Integer.parseInt(s1);
+        } catch (Exception e) {
+            if (s1.charAt(0) == '-') return Integer.MIN_VALUE;
+            else return Integer.MAX_VALUE;
+        }
+    }
+```
+
+# 剑指 Offer
+
+## 剑指 Offer 05. 替换空格
+
+```java
+/**
+     * 剑指 Offer 05. 替换空格
+     * 2021年4月2日 15:56:13
+     * https://leetcode-cn.com/problems/ti-huan-kong-ge-lcof/
+     *
+     * @return
+     */
+    public static void main(String[] args) {
+        System.out.println("We are happy.\t\t" + replaceSpace2("We are happy."));
+    }
+    /**
+     * 解答成功: 执行耗时:0 ms,击败了100.00% 的Java用户 内存消耗:36.3 MB,击败了46.05% 的Java用户
+     * 2021年4月2日 15:56:13
+     * @param s
+     * @return
+     */
+    public static String replaceSpace(String s) {
+        return s.replace(" ", "%20");
+    }
+    /**
+     * 解答成功: 执行耗时:0 ms,击败了100.00% 的Java用户 内存消耗:36.1 MB,击败了87.26% 的Java用户
+     * 2021年4月2日 16:11:12
+     * @param s
+     * @return
+     */
+    public static String replaceSpace2(String s) {
+        if (s == null) {
+            return s;
+        }
+        int start = 0;
+        int end = 0;
+        StringBuilder stringBuilder = new StringBuilder();
+        for (int i = 0; i < s.length(); i++) {
+            if (s.charAt(i) == ' ') {
+                end = i;
+                stringBuilder.append(s, start, end).append("%20");
+                start = i + 1;
+            }
+        }
+        if (start < s.length()) {
+            stringBuilder.append(s.substring(start));
+        }
+        return stringBuilder.toString();
     }
 ```
 
