--- a/CentOS系统的学习/常见命令与设置.md
+++ b/CentOS系统的学习/常见命令与设置.md
@@ -21,3 +21,12 @@ source /etc/profile
 
 2.find命令跳过目录
 
+3.查看磁盘空间
+
+> https://www.cnblogs.com/brady-wang/p/10847754.html
+
+```shell
+#查看当前路径所以目录大小
+du -sh ./*
+```
+
