--- a/数据结构与算法/leetcode/算法刷题.md
+++ b/数据结构与算法/leetcode/算法刷题.md
@@ -165,6 +165,71 @@
     }
 ```
 
+## 12.整数转罗马数字
+
+```java
+//1.暴力遍历
+/**
+         * 整数转罗马数字
+         * https://leetcode-cn.com/problems/integer-to-roman/
+         * 执行耗时:6 ms,击败了50.87% 的Java用户
+         * 内存消耗:38.3 MB,击败了37.55% 的Java用户
+         * @param num
+         * @return
+         */
+        public String intToRoman(int num) {
+            StringBuilder stringBuilder = new StringBuilder();
+            if (num <= 0) {
+                return "";
+            }
+            if (num < 4) {
+                for (int i = 0; i < num; i++) {
+                    stringBuilder.append("I");
+                }
+            } else if (num == 4) {
+                stringBuilder.append("IV");
+            } else if (num < 9) {
+                stringBuilder.append("V").append(intToRoman(num - 5));
+            } else if (num == 9) {
+                stringBuilder.append("IX");
+            } else if (num < 40) {
+                for (int i = 0; i < num / 10; i++) {
+                    stringBuilder.append("X");
+                }
+                stringBuilder.append(intToRoman(num % 10));
+            } else if (num < 50) {
+                stringBuilder.append("XL");
+                stringBuilder.append(intToRoman(num % 10));
+            } else if (num < 90) {
+                stringBuilder.append("L").append(intToRoman(num - 50));
+            } else if (num < 100) {
+                stringBuilder.append("XC");
+                stringBuilder.append(intToRoman(num % 10));
+            } else if (num < 400) {
+                for (int i = 0; i < num / 100; i++) {
+                    stringBuilder.append("C");
+                }
+                stringBuilder.append(intToRoman(num % 100));
+            } else if (num < 500) {
+                stringBuilder.append("CD");
+                stringBuilder.append(intToRoman(num % 100));
+            } else if (num < 900) {
+                stringBuilder.append("D").append(intToRoman(num - 500));
+            } else if (num < 1000) {
+                stringBuilder.append("CM");
+                stringBuilder.append(intToRoman(num % 100));
+            } else if (num < 4000) {
+                for (int i = 0; i < num / 1000; i++) {
+                    stringBuilder.append("M");
+                }
+                stringBuilder.append(intToRoman(num % 1000));
+            }
+            return stringBuilder.toString();
+        }
+```
+
+
+
 # 剑指 Offer
 
 ## 剑指 Offer 05. 替换空格
