shell命令设置properties中的指定配置信息 shell run springboot 通用启动脚本

--- a/CentOS系统的学习/常见命令与设置.md
+++ b/CentOS系统的学习/常见命令与设置.md
@@ -30,3 +30,21 @@ source /etc/profile
 du -sh ./*
 ```
 
+4.shell命令设置properties中的指定配置信息
+
+```shell
+sed -i "s#^abc=.*#user.name=用户名#g"  /root/test.properties
+# abc=.*  													-->	原来的配置信息
+# user.name=用户名											  --> 新的配置信息
+# /root/test.properties										-->	配置文件路径
+```
+
+5.shell反引号赋值变量问题
+
+```shell
+val1=name
+echo `echo $name`
+# 或者
+echo $(echo $name)
+```
+
