--- a/简历文档/个人简历.md
+++ b/简历文档/个人简历.md
@@ -16,5 +16,37 @@
 
 # 工作经历
 
-在职时间：
+在职时间：2020-04-01~至今
+
+公司名称：北京国双科技有限公司
+
+担任职务：Java开发
+
+# 项目经历
+
+## 项目名称：图数据库软件
+
+**项目描述**：图数据库(GraphX Manager)设计目的是为了图存储、消费和管理变得简单和直观。是一款具有基础能力、分布式能力、兼容能力、管理能力、安装能力以及高可用能力等多能力的产品。能在在超过TB的结构数据里，为用户提供足够低延迟的实时查询。
+
+**项目技术**：Spring Cloud、Mybatis、Postgresql、Neo4j、Dgraph、
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
