算法学习调整

--- a/数据结构与算法/leetcode/算法刷题.md
+++ b/数据结构与算法/leetcode/算法刷题.md
@@ -1,6 +1,6 @@
 # LeetCode
 
-## 1.两数之和
+## 1.两数之和:heavy_check_mark:
 
 ```java
 /**
@@ -36,75 +36,190 @@
     }
 ```
 
+## 5.最长回文字串:heavy_check_mark:
 
-
-## 5.最长回文字串
+<video src="./算法刷题图片/视频/05.mp4"></video>
 
 ```java
-/**
-     * https://leetcode-cn.com/problems/longest-palindromic-substring/
+    /**
+     * 暴力破解
+     *执行用时： 145 ms , 在所有 Java 提交中击败了 58.83% 的用户
+     * 内存消耗： 38.4 MB , 在所有 Java 提交中击败了 84.25% 的用户
+     * @param s
+     * @return
      */
-    @Test
-    public void demo01() {
-        System.out.println(longestPalindrome("cabad"));
-        System.out.println(longestPalindrome("cbbd"));
-        System.out.println(longestPalindrome("abcadbcd"));
-        System.out.println(longestPalindrome("abadabcd"));
-        //解答失败: 测试用例:"ccc" 测试结果:"cc" 期望结果:"ccc" stdout:
-        System.out.println(longestPalindrome("ccc"));
-        System.out.println(longestPalindrome("accc"));
-        //测试用例:"ac" 测试结果:"ac" 期望结果:"a" stdout:
-        System.out.println(longestPalindrome("ac"));
-        System.out.println(longestPalindrome(RandomUtil.randomString(RandomUtil.randomInt(5, 30))));
+    public static String longestPalindrome(String s) {
+        //当s的长度小于1，如：a,直接返回本身
+        if (s.length() < 1) {
+            return s;
+        }
+        //回文字符串的最大长度，默认第一个就是回文
+        int maxLen = 1;
+        //回文字符的其实位置
+        int start = 0;
+        char[] chars = s.toCharArray();
+        for (int i = 0; i < chars.length; i++) {
+            for (int j = i + 1; j < chars.length; j++) {
+                if (j - i +1> maxLen && isPalindrome(chars, i, j)) {
+                    maxLen = j - i+1;
+                    start = i;
+                }
+            }
+        }
+        //最后截取
+        return s.substring(start, start + maxLen);
     }
 
     /**
-     * 没搞出来
-     * @param s
+     * 判断是不是回文
+     * @param charArray
+     * @param left
+     * @param right
      * @return
-     * 2021年4月1日 18:01:31
      */
-    public static String longestPalindrome(String s) {
-        if (s == null || s.equals("")) return "";
-        String[] split = s.split("");
-        HashMap<String, Integer> map = new HashMap<>();
-        //1.暴力
-        for (int i = 0; i < split.length; i++) {
-            Integer integer = map.get(split[i]);
-            if (integer == null) {
-                map.put(split[i], i);
+    private static boolean isPalindrome(char[] charArray, int left, int right) {
+        //aba  abcdcba
+        while (left < right) {
+            if (charArray[left] == charArray[right]) {
+                right--;
+                left++;
             } else {
-                return s.substring(integer, i + 1);
+                return false;
             }
         }
-        return split[0];
+        return true;
     }
 
-    public static String longestPalindrome2(String s) {
-        if (s == null || "".equals(s)) {
-            return "";
+/**
+     * 中心扩散法
+     * 执行用时：9 ms, 在所有 Java 提交中击败了95.76%的用户
+     * 内存消耗：38.1 MB, 在所有 Java 提交中击败了98.48%的用户
+     * @param s
+     * @return
+     */
+    public static String longestPalindrome(String s) {
+        //当s的长度小于1，如：a,直接返回本身
+        if (s.length() < 1) {
+            return s;
         }
-        String[] split = s.split("");
-        HashMap<String, Integer> map = new HashMap<>();
-        int max = 0;
         int start = 0;
-        int end = 1;
-        for (int i = 0; i < split.length; i++) {
-            if (map.containsKey(split[i])) {
-                int temp = i - map.get(split[i]);
-                if (temp > max) {
-                    max = temp;
-                    start = map.get(split[i]);
-                    end = i + 1;
-                }
+        int maxLen = 1;
+        char[] chars = s.toCharArray();
+        for (int i = 0; i < chars.length - 1; i++) {
+            int odd = centerPalindrome(chars, i, i);
+            int even = centerPalindrome(chars, i, i + 1);
+            int max = Math.max(odd, even);
+            if (max > maxLen) {
+                maxLen = max;
+                start = i - (maxLen - 1) / 2;
             }
-            map.put(split[i], i);
         }
-        return s.substring(start, end);
+        //最后截取
+        return s.substring(start, start + maxLen);
+    }
+
+    private static int centerPalindrome(char[] chars, int left, int right) {
+        while (left >= 0 && right < chars.length) {
+            if (chars[left] == chars[right]) {
+                left--;
+                right++;
+            } else {
+                break;
+            }
+        }
+        return right - left - 1;
     }
 ```
 
-## 8.字符串转换整数 (atoi)
+## 6.[Z 字形变换](https://leetcode-cn.com/problems/zigzag-conversion/):heavy_multiplication_x:
+
+<video src="./算法刷题图片/视频/06.mp4"></video>
+
+```java
+/**
+* 反正没成功
+*/
+public static String convert(String s, int numRows) {
+        if (numRows < 2) return s;
+        if (numRows >= s.length()) {
+            return s;
+        }
+        char[] chars = s.toCharArray();
+        if (chars.length < 3) return s;
+        StringBuilder[] sb = new StringBuilder[numRows];
+        for (int i = 0; i < sb.length; i++) {
+            sb[i] = new StringBuilder();
+        }
+        boolean isDown = true;
+        int index = 0;
+        for (int i = 0; i < chars.length; i++) {
+            if (isDown) {
+                sb[index].append(chars[i]);
+                if (index == numRows - 1) {
+                    isDown = false;
+                    index = numRows - 3;
+                }
+                index++;
+            } else {
+                sb[index].append(chars[i]);
+                if (index == 0) {
+                    isDown = true;
+                    index = 1;
+                }
+                index--;
+            }
+        }
+        for (int i = 1; i < sb.length; i++) {
+            sb[0].append(sb[i]);
+        }
+        return sb[0].toString();
+    }
+```
+
+
+
+## 7.[整数反转:heavy_check_mark:](https://leetcode-cn.com/problems/reverse-integer/)
+
+<video src="./算法刷题图片/视频/07.mp4"></video>
+
+```java
+public int reverse(int x) {
+        try {
+            int result=0;
+            int jian=0;
+            int len=String.valueOf(x).length();
+            int[] ints = new int[len];
+            int d=0;
+            while (true){
+                int pow =(int) Math.pow(10, (d + 1));
+                int re = (x%pow);
+                ints[d]=re;
+                //退出条件，等于它本身
+                if (re==x){
+                    re= (int) ((re-jian)/Math.pow(10, d));
+                    re= (int) (re*Math.pow(10,len-d-1));
+                    result=result+re;
+                    if (x<0){
+                        return result/10;
+                    }
+                    return result;
+                }else {
+                    re= (int) ((re-jian)/Math.pow(10, d));
+                    re= (int) (re*Math.pow(10,len-d-1));
+                    result=result+re;
+                }
+                jian=ints[d];
+                d++;
+            }
+        }catch (Exception e){
+            return 0;
+        }
+    }
+```
+
+
+
+## 8.字符串转换整数 (atoi):heavy_check_mark:
 
 ```java
 /**
@@ -165,7 +280,19 @@
     }
 ```
 
-## 12.整数转罗马数字
+## 9.[回文数](https://leetcode-cn.com/problems/palindrome-number/):heavy_multiplication_x:
+
+<video src="./算法刷题图片/视频/09.mp4"></video>
+
+## 10.[正则表达式匹配](https://leetcode-cn.com/problems/regular-expression-matching/):heavy_multiplication_x:
+
+<video src="./算法刷题图片/视频/10.mp4"></video>
+
+## 11.[盛最多水的容器](https://leetcode-cn.com/problems/container-with-most-water/):heavy_multiplication_x:
+
+<video src="./算法刷题图片/视频/11.mp4"></video>
+
+## 12.整数转罗马数字:heavy_check_mark:
 
 ```java
 //1.暴力遍历
@@ -228,11 +355,13 @@
         }
 ```
 
+## 15.[三数之和](https://leetcode-cn.com/problems/3sum/):heavy_multiplication_x:
 
+<video src="./算法刷题图片/视频/15.mp4"></video>
 
 # 剑指 Offer
 
-## 剑指 Offer 05. 替换空格
+## 剑指 Offer 05. 替换空格:heavy_check_mark:
 
 ```java
 /**
