设计模式笔记大纲

--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -1,2 +1,20 @@
 > 参考学习资料：https://www.bilibili.com/video/BV1G4411c7N4?from=search&seid=9231732737918721402
 
+# 一、7大原则
+
+## 1.单一职责原则
+
+## 2.接口隔离原则
+
+## 3.依赖倒转原则
+
+## 4.里氏替换原则
+
+## 5.开闭原则
+
+## 6.迪米特法则
+
+## 7.合成复用原则
+
+# 二、设计模式
+
