--- a/简历文档/个人简历.md
+++ b/简历文档/个人简历.md
@@ -4,6 +4,7 @@
 - 性别：男    					           电话：15114072042
 - 毕业院校：沈阳化工大学        学历：本科
 - 应聘岗位：Java开发相关岗位
+- [个人笔记](https://github.com/sevenyjl/study)
 
 # 专业技能
 
@@ -28,9 +29,17 @@
 
 **项目描述**：图数据库(GraphX Manager)设计目的是为了图存储、消费和管理变得简单和直观。是一款具有基础能力、分布式能力、兼容能力、管理能力、安装能力以及高可用能力等多能力的产品。能在在超过TB的结构数据里，为用户提供足够低延迟的实时查询。
 
-**项目技术**：Spring Cloud、Mybatis、Postgresql、Neo4j、Dgraph、
+**项目技术**：Spring Cloud、Mybatis、Postgresql、Neo4j、Dgraph、prometheus
 
+**负责模块**：
 
+项目名称：知识图谱
+
+项目描述
+
+项目技术
+
+负责模块
 
 
 
