完善个人简历

--- a/简历文档/个人简历.md
+++ b/简历文档/个人简历.md
@@ -8,12 +8,18 @@
 
 # 专业技能
 
-- 熟悉Java语法，多线程，集合等。
-- 对JVM原理有初步的理解。
-- 精通Redis集群搭建，了解高并发下缓存穿透、缓存雪崩原因
-- 熟悉使用主流关系性数据库，如MySql、PG。了解主流图数据库：neo4j、dgraph等
+- 熟练使用开发中常见IDE，例如：eclipse、idea、navicat以及git和svn团队开发工具等；
+- java基础知识扎实，熟悉面向对象的编程思想、熟悉集合、IO流、线程、反射、泛型及代理等技术
+- 掌握java常用设计模式：单例模式、工厂模式、代理模式、装饰设计模式、适配器模式等
+- 熟练使用开发中常用关系型数据库MySQL、PG，对MySQL优化有一定了解。了解主流图数据库：neo4j、dgraph等。使用过oracle，使用过PLSQL Developer;
+- 熟悉非关系型数据库Redis、MongoDB等
+- 熟练掌握javaWeb开发中的Servlet、JSP、EL和JSTL等技术，熟悉常见的会话技术
+- 熟练掌握网络前端开发技术，如：HTML5、CSS3、JavaScript、Jquery、以及了解常见的开发框架BootStrap,Vue框架
+- 熟练掌握Spring5、SpringBoot、SpringMVC、Mybatis、hibernate、ES等框架；
+- 熟悉SpringCloud微服务开发常用组件，例如Eureka、Ribbon、Feign、Hystrix、zuul等；
+- 熟悉使用Maven、gradle等项目开发管理工具；
+- 熟悉Linux常用命令、docker容器以及环境搭建和项目部署
 - 熟悉k8s、prometheus、ELK等运维系统
-- 熟练掌握Spring Cloud等主流微服务开发框架
 
 # 工作经历
 
@@ -21,27 +27,64 @@
 
 公司名称：北京国双科技有限公司
 
-担任职务：Java开发
+担任职务：中台-技术共享中心/后端技术部
 
 # 项目经历
 
-## 项目名称：图数据库软件
+### **项目名称**：权限框架
+
+**项目描述**：基于RBAC模型开发，主要目的是对不同的人访问资源进行权限的控制，避免因权限控制缺失或操作不当引发的风险问题，如操作错误，隐私数据泄露等问题。
+
+**项目技术**：Spring Cloud、Mybatis、Postgresql、nacos
+
+数据库设计：![Diagram 1](G:\study\简历文档\个人简历.assets\Diagram 1.jpg)
+
+项目效果图：
+
+![image-20210625215242985](G:\study\简历文档\个人简历.assets\image-20210625215242985.png)
+
+### **项目名称**：图数据库软件
 
 **项目描述**：图数据库(GraphX Manager)设计目的是为了图存储、消费和管理变得简单和直观。是一款具有基础能力、分布式能力、兼容能力、管理能力、安装能力以及高可用能力等多能力的产品。能在在超过TB的结构数据里，为用户提供足够低延迟的实时查询。
 
 **项目技术**：Spring Cloud、Mybatis、Postgresql、Neo4j、Dgraph、prometheus
 
-**负责模块**：
+**模块划分**：集群管理、工作台、实例列表、备份恢复、集群监控、日志管理、导入导出、配置管理、调度中心
 
-项目名称：知识图谱
+**工作内容**：
 
-项目描述
+1. 工作台模块：能直接通过cypher语句对neo4j图库进行增删改查操作
+2. 集群监控：基于Prometheus对OS、图库的读写速率进行指标监控，邮件报警
+3. 实例管理：管理集群的图库实例，并支持在线升级能力
+4. 备份与恢复：支持在线增量、全量备份恢复。
 
-项目技术
+项目效果图:
 
-负责模块
+![image-20210625223054211](G:\study\简历文档\个人简历.assets\image-20210625223054211.png)![image-20210625224937641](G:\study\简历文档\个人简历.assets\image-20210625224937641.png)
 
+### 项目名称：知识图谱
 
+**项目描述**：支持百亿上的实体和关系管理，基于业务场景对数据进行深度关联分析。对知识进行深度加工处理，
+
+**项目技术**：Spring Cloud、Mybatis、Postgresql、Neo4j、minio、ES、DolphinScheduler、
+
+**负责模块**：权限模块、库表智能模块、任务调度模块、文档实体标注模块
+
+**工作内容**：
+
+​	库表智能模块：搭配任务调度将结构化数据进行数据清洗并转换为实体数据存入图库中。支持pg、mysql、oracle等主流结构化数据库
+
+​	任务调度模块：基于开源调度框架DolphinScheduler做了集成开发，执行一些常用job。
+
+​	文档实体标注模块：对pdf、word等文档进行转换后生成的可标注文档，并对文档进行人工标注，当标注到一定数量，可以基于AI训练模型并预标注处理。从而达到对文档数据进行快速标注能力
+
+项目效果图:
+
+![image-20210625230105961](G:\study\简历文档\个人简历.assets\image-20210625230105961.png)
+
+![image-20210625230554343](G:\study\简历文档\个人简历.assets\image-20210625230554343.png)
+
+![image-20210625230746524](G:\study\简历文档\个人简历.assets\image-20210625230746524.png)
 
 
 
