--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -1,4 +1,5 @@
 1. [UTools 快速启动工具](https://res.u-tools.cn/currentversion/uTools-1.3.5.exe)
+
 2. [Typora MD编辑](https://typora.io/windows/typora-setup-x64.exe?)
 
 2. [ditto剪贴板](https://github-releases.githubusercontent.com/312430210/65d4a280-790a-11eb-8648-643c509ae217?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210628T033846Z&X-Amz-Expires=300&X-Amz-Signature=e9454154d55745ba401c5a203ade32a7d0789748897b33b84a1a7858bd160bf0&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=312430210&response-content-disposition=attachment%3B%20filename%3DDittoSetup_64bit_3_24_184_0.exe&response-content-type=application%2Foctet-stream)
@@ -25,39 +26,39 @@
    YF390-0HF8P-M81RQ-2DXQE-M2UT6
    ZF71R-DMX85-08DQY-8YMNC-PPHV8
 
-9. [xshell](https://cdn.netsarang.net/38696f28/Xshell-7.0.0073.exe)
+10. [xshell](https://cdn.netsarang.net/38696f28/Xshell-7.0.0073.exe)
 
-   注册机
+   [破解地址1](https://sevenyjl.lanzoui.com/iCvgiqs4yre)
 
    todo 备份机器
 
-   todo 打包破解 上传蓝奏云 更新下载地址  D:\soft\NetSarang\
-
-10. [postman](https://dl.pstmn.io/download/latest/win64)
+11. [postman](https://dl.pstmn.io/download/latest/win64)
 
     中文补丁
 
-11. [navicat](https://download3.navicat.com/download/navicat150_premium_en_x64.exe)
+    todo备份接口文档
 
-    注册机
+12. [navicat](https://download.navicat.com.cn/download/navicat150_premium_cs_x64.exe)
+
+    [注册机](https://sevenyjl.lanzoui.com/i3Gvrqs6v6h)
 
     todo 备份数据库信息
 
-12. [Java8](https://sdlc-esd.oracle.com/ESD6/JSCDL/jdk/8u291-b10/d7fc238d0cbf4b0dac67be84580cfb4b/jre-8u291-windows-x64.exe?GroupName=JSC&FilePath=/ESD6/JSCDL/jdk/8u291-b10/d7fc238d0cbf4b0dac67be84580cfb4b/jre-8u291-windows-x64.exe&BHost=javadl.sun.com&File=jre-8u291-windows-x64.exe&AuthParam=1624851282_8d82f075b73256719baf5de98349efe0&ext=.exe) [Java11](https://download.oracle.com/otn/java/jdk/11.0.11+9/ab2da78f32ed489abb3ff52fd0a02b1c/jdk-11.0.11_windows-x64_bin.exe?AuthParam=1624851190_2a84711a4ebe374ed1b1d6d6130bc630)
+13. [Java8](https://sdlc-esd.oracle.com/ESD6/JSCDL/jdk/8u291-b10/d7fc238d0cbf4b0dac67be84580cfb4b/jre-8u291-windows-x64.exe?GroupName=JSC&FilePath=/ESD6/JSCDL/jdk/8u291-b10/d7fc238d0cbf4b0dac67be84580cfb4b/jre-8u291-windows-x64.exe&BHost=javadl.sun.com&File=jre-8u291-windows-x64.exe&AuthParam=1624851282_8d82f075b73256719baf5de98349efe0&ext=.exe) [Java11](https://download.oracle.com/otn/java/jdk/11.0.11+9/ab2da78f32ed489abb3ff52fd0a02b1c/jdk-11.0.11_windows-x64_bin.exe?AuthParam=1624851190_2a84711a4ebe374ed1b1d6d6130bc630)
 
-13. [Geek Uninstall](https://crystalidea.com/downloads/uninstalltool_setup.exe)
+14. [Geek Uninstall](https://crystalidea.com/downloads/uninstalltool_setup.exe)
 
     todo 破解
 
     tood 打包破解地址更新下载地址 D:\soft\Uninstall Tool\
 
-14. [bandzip](https://dl.bandisoft.com/bandizip.std/BANDIZIP-SETUP-STD-X64.EXE?1)
+15. [bandzip](https://dl.bandisoft.com/bandizip.std/BANDIZIP-SETUP-STD-X64.EXE?1)
 
     todo破解
 
-15. [everything](https://www.voidtools.com/Everything-1.4.1.1009.x86-Setup.exe)
+16. [everything](https://www.voidtools.com/Everything-1.4.1.1009.x86-Setup.exe)
 
-16. [IDEA](https://download-cdn.jetbrains.com/idea/ideaIU-2021.1.2.exe)
+17. [IDEA](https://download-cdn.jetbrains.com/idea/ideaIU-2021.1.2.exe)
 
     todo 破解教程
 
@@ -65,27 +66,33 @@
 
     todo 研究导出setting
 
-17. [sourceTreeSetup](https://product-downloads.atlassian.com/software/sourcetree/windows/ga/SourceTreeSetup-3.4.5.exe)
+18. [sourceTreeSetup](https://product-downloads.atlassian.com/software/sourcetree/windows/ga/SourceTreeSetup-3.4.5.exe)
 
     备份key
 
-18. [微信](https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe)
+19. [微信](https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe)
 
-19. [sublime](https://download.sublimetext.com/sublime_text_build_4107_x64_setup.exe)
+    双开补丁
+
+20. [sublime](https://download.sublimetext.com/sublime_text_build_4107_x64_setup.exe)
 
     todo插件文档
 
-20. ShadowsocksR小飞机
+21. [ShadowsocksR小飞机](https://sevenyjl.lanzoui.com/iLVr1qs4ugj)
 
-    todo 打包 上传 更新地址 D:\soft\ShadowsocksR-win-4.9.0\
-
-21. [Maven](https://ftp.jaist.ac.jp/pub/apache/maven/maven-3/3.8.1/binaries/apache-maven-3.8.1-bin.tar.gz)
+22. [Maven](https://ftp.jaist.ac.jp/pub/apache/maven/maven-3/3.8.1/binaries/apache-maven-3.8.1-bin.tar.gz)
 
     todo 备份conf文件
 
-22. [GIt](https://github-releases.githubusercontent.com/23216272/cdb84600-c7a1-11eb-87cb-3c0f6911b0f1?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210628T080330Z&X-Amz-Expires=300&X-Amz-Signature=e19fc10b3ea3a8cb2202eea9345cce1d5c9f32f05ddc390569e1d61e21a997d7&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=23216272&response-content-disposition=attachment%3B%20filename%3DGit-2.32.0-64-bit.exe&response-content-type=application%2Foctet-stream)
+23. [GIt](https://github-releases.githubusercontent.com/23216272/cdb84600-c7a1-11eb-87cb-3c0f6911b0f1?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210628T080330Z&X-Amz-Expires=300&X-Amz-Signature=e19fc10b3ea3a8cb2202eea9345cce1d5c9f32f05ddc390569e1d61e21a997d7&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=23216272&response-content-disposition=attachment%3B%20filename%3DGit-2.32.0-64-bit.exe&response-content-type=application%2Foctet-stream)
 
-    todo 备份 F:\aaa-project\gitee\   Clone.class git.bat
+    [git工具](https://sevenyjl.lanzoui.com/iIgX3qs4sde)
 
-23. 
+24. 护眼软件
+
+25. 下载神器IMD
+
+    破解教程
+
+26. [PotPlayer播放器](https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe)
 
