--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -60,7 +60,7 @@
 
 17. [IDEA](https://download-cdn.jetbrains.com/idea/ideaIU-2021.1.2.exe)
 
-    todo 破解教程
+    [破解教程](https://gitee.com/GTeam_seven/study/blob/master/idea/idea%E6%BF%80%E6%B4%BB%E6%95%99%E7%A8%8B.md)
 
     todo 插件推荐
 
@@ -95,4 +95,14 @@
     破解教程
 
 26. [PotPlayer播放器](https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe)
+
+27. MindManager
+
+    许可证
+
+    file:///E:/%E4%B8%8B%E8%BD%BD/%E8%B0%B7%E6%AD%8C%E4%B8%8B%E8%BD%BD/Mindjet%20MindManager%202021%20v21.0.261%20(x64)%20Multilingual.7z
+
+    https://sevenyjl.lanzoui.com/igLtfqsrech
+
+28. 
 
