--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -18,3 +18,27 @@
 
 # 二、设计模式
 
+1.单例
+2.抽象
+3.原型
+4.建造者
+5.工厂
+6.适配器
+7.桥接
+8.装饰
+9.组合
+10.外观
+11.享元
+12.代理
+13.模块方法
+14.命令
+15.访问者
+16.迭代者
+17.观察者
+18.中介者
+19.备忘录
+20.解释器
+21.状态
+22.策略
+23.职责链
+
