开发软件添加

--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -74,7 +74,9 @@
 
     双开补丁
 
-20. [sublime](https://download.sublimetext.com/sublime_text_build_4107_x64_setup.exe)
+20. [sublime3](https://download.sublimetext.com/sublime_text_build_4107_x64_setup.exe)
+
+    破解：
 
     todo插件文档
 
@@ -104,5 +106,11 @@
 
     https://sevenyjl.lanzoui.com/igLtfqsrech
 
-28. 
+28. [Lively Wallpaper](https://github-releases.githubusercontent.com/201188122/db8b2800-d6ca-11eb-86c2-3e5f0945c76c?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210629%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210629T053848Z&X-Amz-Expires=300&X-Amz-Signature=29ab2dd6d8bfd1f56576948c5eb06fce4ef974eba4552df3357e2dd5648da5c8&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=201188122&response-content-disposition=attachment%3B%20filename%3Dlively_setup_x86_full_v1700.exe&response-content-type=application%2Foctet-stream)
+
+29. [pg数据库](https://get.enterprisedb.com/postgresql/postgresql-13.3-2-windows-x64.exe)
+
+30. mysql数据库
+
+> 参考链接：https://www.52pojie.cn/forum.php?mod=collection&action=view&ctid=2124
 
