微信双开补丁

--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -72,7 +72,7 @@
 
 19. [微信](https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe)
 
-    双开补丁
+    [双开补丁](https://uzou.lanzoui.com/igYGCqpnfih)
 
 20. [sublime3](https://download.sublimetext.com/sublime_text_build_4107_x64_setup.exe)
 
