完善开发软件记录

--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -34,23 +34,21 @@
 
 11. [postman](https://dl.pstmn.io/download/latest/win64)
 
-    中文补丁
+    [中文补丁](https://github.com/hlmd/Postman-cn)
 
-    todo备份接口文档
+    [备份接口文档](https://sevenyjl.lanzoui.com/il7zir4skze)
 
 12. [navicat](https://download.navicat.com.cn/download/navicat150_premium_cs_x64.exe)
 
     [注册机](https://sevenyjl.lanzoui.com/i3Gvrqs6v6h)
 
-    todo 备份数据库信息
+    [备份数据库信息](https://sevenyjl.lanzoui.com/iIOTTqs7zub)
 
-13. [Java8](https://sdlc-esd.oracle.com/ESD6/JSCDL/jdk/8u291-b10/d7fc238d0cbf4b0dac67be84580cfb4b/jre-8u291-windows-x64.exe?GroupName=JSC&FilePath=/ESD6/JSCDL/jdk/8u291-b10/d7fc238d0cbf4b0dac67be84580cfb4b/jre-8u291-windows-x64.exe&BHost=javadl.sun.com&File=jre-8u291-windows-x64.exe&AuthParam=1624851282_8d82f075b73256719baf5de98349efe0&ext=.exe) [Java11](https://download.oracle.com/otn/java/jdk/11.0.11+9/ab2da78f32ed489abb3ff52fd0a02b1c/jdk-11.0.11_windows-x64_bin.exe?AuthParam=1624851190_2a84711a4ebe374ed1b1d6d6130bc630)
+13. [java8](https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/8/jdk/x64/windows/OpenJDK8U-jdk_x64_windows_hotspot_8u292b10.msi)  [java11](https://mirrors.tuna.tsinghua.edu.cn/AdoptOpenJDK/11/jdk/x64/windows/OpenJDK11U-jdk_x64_windows_hotspot_11.0.11_9.msi)
 
 14. [Geek Uninstall](https://crystalidea.com/downloads/uninstalltool_setup.exe)
 
-    todo 破解
-
-    tood 打包破解地址更新下载地址 D:\soft\Uninstall Tool\
+    [破解](https://sevenyjl.lanzoui.com/iFVudr4qvib)
 
 15. [bandzip](https://dl.bandisoft.com/bandizip.std/BANDIZIP-SETUP-STD-X64.EXE?1)
 
@@ -68,7 +66,7 @@
 
 18. [sourceTreeSetup](https://product-downloads.atlassian.com/software/sourcetree/windows/ga/SourceTreeSetup-3.4.5.exe)
 
-    备份key
+    [备份key](https://sevenyjl.lanzoui.com/iSV5Ar4qwla)
 
 19. [微信](https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe)
 
@@ -90,11 +88,9 @@
 
     [git工具](https://sevenyjl.lanzoui.com/iIgX3qs4sde)
 
-24. 护眼软件
+25. [下载神器IDM](https://mirror2.internetdownloadmanager.com/idman638build25.exe?b=1&filename=idman638build25.exe)
 
-25. 下载神器IMD
-
-    破解教程
+    [破解教程](https://sevenyjl.lanzoui.com/icUBVqwod6b)
 
 26. [PotPlayer播放器](https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe)
 
@@ -102,15 +98,17 @@
 
     许可证
 
-    file:///E:/%E4%B8%8B%E8%BD%BD/%E8%B0%B7%E6%AD%8C%E4%B8%8B%E8%BD%BD/Mindjet%20MindManager%202021%20v21.0.261%20(x64)%20Multilingual.7z
-
     https://sevenyjl.lanzoui.com/igLtfqsrech
 
 28. [Lively Wallpaper](https://github-releases.githubusercontent.com/201188122/db8b2800-d6ca-11eb-86c2-3e5f0945c76c?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210629%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210629T053848Z&X-Amz-Expires=300&X-Amz-Signature=29ab2dd6d8bfd1f56576948c5eb06fce4ef974eba4552df3357e2dd5648da5c8&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=201188122&response-content-disposition=attachment%3B%20filename%3Dlively_setup_x86_full_v1700.exe&response-content-type=application%2Foctet-stream)
 
 29. [pg数据库](https://get.enterprisedb.com/postgresql/postgresql-13.3-2-windows-x64.exe)
 
-30. mysql数据库
+29. mysql数据库
+
+30. [Iris Pro护眼](https://sevenyjl.lanzoui.com/iQPbWr4qrcb)
+
+31. [Tomcat9](https://ftp.kddi-research.jp/infosystems/apache/tomcat/tomcat-9/v9.0.50/bin/apache-tomcat-9.0.50.zip)
 
 > 参考链接：https://www.52pojie.cn/forum.php?mod=collection&action=view&ctid=2124
 
