完善激活补丁

--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -52,7 +52,7 @@
 
 15. [bandzip](https://dl.bandisoft.com/bandizip.std/BANDIZIP-SETUP-STD-X64.EXE?1)
 
-    todo破解
+    [破解补丁](https://sevenyjl.lanzoui.com/iQuJ2razxvg)
 
 16. [everything](https://www.voidtools.com/Everything-1.4.1.1009.x86-Setup.exe)
 
@@ -82,7 +82,7 @@
 
 22. [Maven](https://ftp.jaist.ac.jp/pub/apache/maven/maven-3/3.8.1/binaries/apache-maven-3.8.1-bin.tar.gz)
 
-    todo 备份conf文件
+    [备份conf文件](https://sevenyjl.lanzoui.com/iItrtrb01cb)
 
 23. [GIt](https://github-releases.githubusercontent.com/23216272/cdb84600-c7a1-11eb-87cb-3c0f6911b0f1?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210628T080330Z&X-Amz-Expires=300&X-Amz-Signature=e19fc10b3ea3a8cb2202eea9345cce1d5c9f32f05ddc390569e1d61e21a997d7&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=23216272&response-content-disposition=attachment%3B%20filename%3DGit-2.32.0-64-bit.exe&response-content-type=application%2Foctet-stream)
 
@@ -94,7 +94,7 @@
 
 26. [PotPlayer播放器](https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe)
 
-27. MindManager
+27. [MindManager21](https://sevenyjl.lanzoui.com/i1iWurazrrg)
 
     许可证
 
@@ -104,11 +104,13 @@
 
 29. [pg数据库](https://get.enterprisedb.com/postgresql/postgresql-13.3-2-windows-x64.exe)
 
-29. mysql数据库
+29. mysql数据库 [8.0.11-win64](http://mirrors.sohu.com/mysql/MySQL-8.0/mysql-8.0.11-winx64.msi)
 
 30. [Iris Pro护眼](https://sevenyjl.lanzoui.com/iQPbWr4qrcb)
 
 31. [Tomcat9](https://ftp.kddi-research.jp/infosystems/apache/tomcat/tomcat-9/v9.0.50/bin/apache-tomcat-9.0.50.zip)
+
+32. [win原镜像下载](https://www.xitongku.com/index.html)
 
 > 参考链接：https://www.52pojie.cn/forum.php?mod=collection&action=view&ctid=2124
 
