算法太难了。。。。

--- a/数据结构与算法/leetcode/算法刷题.md
+++ b/数据结构与算法/leetcode/算法刷题.md
@@ -133,54 +133,61 @@
 
 ## 6.[Z 字形变换](https://leetcode-cn.com/problems/zigzag-conversion/):heavy_multiplication_x:
 
-<video src="./算法刷题图片/视频/06.mp4"></video>
-
 ```java
-/**
-* 反正没成功
-*/
-public static String convert(String s, int numRows) {
+public static void main(String[] args) {
+        //3:PAHNAPLSIIGYIR
+        //3:PAHNAPLSIIGYIR
+        //4:PINALSIGYAHRPI
+        //4:PINALSIGYAHRPI
+        String s = "ABCD";//ACBD
+        String convert = convert(s, 2);
+        System.out.println(convert);
+    }
+
+
+    public static String convert(String s, int numRows) {
         if (numRows < 2) return s;
-        if (numRows >= s.length()) {
-            return s;
-        }
-        char[] chars = s.toCharArray();
-        if (chars.length < 3) return s;
-        StringBuilder[] sb = new StringBuilder[numRows];
-        for (int i = 0; i < sb.length; i++) {
-            sb[i] = new StringBuilder();
-        }
-        boolean isDown = true;
+        if (s.length() <= numRows) return s;
         int index = 0;
+        int max = numRows - 2;
+        int lie = 0;
+        char[] chars = s.toCharArray();
+        String[][] strings = new String[numRows][s.length() / (numRows + max) * 2 + 1];
         for (int i = 0; i < chars.length; i++) {
-            if (isDown) {
-                sb[index].append(chars[i]);
-                if (index == numRows - 1) {
-                    isDown = false;
-                    index = numRows - 3;
-                }
-                index++;
+            if (i % (numRows * 2 - 2) == 0) {
+                lie = 0;
+                strings[lie][index] = chars[i] + "";
+                lie++;
             } else {
-                sb[index].append(chars[i]);
-                if (index == 0) {
-                    isDown = true;
-                    index = 1;
+                if (index % 2 == 0) {
+                    strings[lie][index] = chars[i] + "";
+                    if (lie % numRows == (numRows - 1)) {
+                        index++;
+                    }
+                    lie++;
+                } else {
+                    strings[max][index] = chars[i] + "";
+                    max--;
+                    if (max == 0) {
+                        max = numRows - 2;
+                        index++;
+                    }
                 }
-                index--;
             }
         }
-        for (int i = 1; i < sb.length; i++) {
-            sb[0].append(sb[i]);
+        StringBuffer stringBuffer = new StringBuffer();
+        for (String[] string : strings) {
+            for (String s1 : string) {
+                if (s1 != null) {
+                    stringBuffer.append(s1);
+                }
+            }
         }
-        return sb[0].toString();
+        return stringBuffer.toString();
     }
 ```
 
-
-
 ## 7.[整数反转:heavy_check_mark:](https://leetcode-cn.com/problems/reverse-integer/)
-
-<video src="./算法刷题图片/视频/07.mp4"></video>
 
 ```java
 public int reverse(int x) {
