--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -2,7 +2,7 @@
 
 2. [Typora MD编辑](https://typora.io/windows/typora-setup-x64.exe?)
 
-2. [ditto剪贴板](https://github-releases.githubusercontent.com/312430210/65d4a280-790a-11eb-8648-643c509ae217?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210628T033846Z&X-Amz-Expires=300&X-Amz-Signature=e9454154d55745ba401c5a203ade32a7d0789748897b33b84a1a7858bd160bf0&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=312430210&response-content-disposition=attachment%3B%20filename%3DDittoSetup_64bit_3_24_184_0.exe&response-content-type=application%2Foctet-stream)
+2. [ditto剪贴板](ditto剪)
 
 3. [q-dir文件夹管理](http://www.softwareok.com/Download/Q-Dir_Installer_x64.zip)
 
@@ -28,7 +28,7 @@
 
 10. [xshell](https://cdn.netsarang.net/38696f28/Xshell-7.0.0073.exe)
 
-   [破解地址1](https://sevenyjl.lanzoui.com/iCvgiqs4yre)
+     [破解地址1](https://sevenyjl.lanzoui.com/iCvgiqs4yre)
 
    todo 备份机器
 
@@ -84,7 +84,7 @@
 
     [备份conf文件](https://sevenyjl.lanzoui.com/iItrtrb01cb)
 
-23. [GIt](https://github-releases.githubusercontent.com/23216272/cdb84600-c7a1-11eb-87cb-3c0f6911b0f1?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210628T080330Z&X-Amz-Expires=300&X-Amz-Signature=e19fc10b3ea3a8cb2202eea9345cce1d5c9f32f05ddc390569e1d61e21a997d7&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=23216272&response-content-disposition=attachment%3B%20filename%3DGit-2.32.0-64-bit.exe&response-content-type=application%2Foctet-stream)
+23. [GIt](https://git-scm.com/)
 
     [git工具](https://sevenyjl.lanzoui.com/iIgX3qs4sde)
 
