--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -100,7 +100,7 @@
 
     https://sevenyjl.lanzoui.com/igLtfqsrech
 
-28. [Lively Wallpaper](https://github-releases.githubusercontent.com/201188122/db8b2800-d6ca-11eb-86c2-3e5f0945c76c?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210629%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210629T053848Z&X-Amz-Expires=300&X-Amz-Signature=29ab2dd6d8bfd1f56576948c5eb06fce4ef974eba4552df3357e2dd5648da5c8&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=201188122&response-content-disposition=attachment%3B%20filename%3Dlively_setup_x86_full_v1700.exe&response-content-type=application%2Foctet-stream)
+28. [Lively Wallpaper](https://rocksdanister.github.io/lively/)
 
 29. [pg数据库](https://get.enterprisedb.com/postgresql/postgresql-13.3-2-windows-x64.exe)
 
