添加开发软件

--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -60,7 +60,7 @@
 
     [破解教程](https://gitee.com/GTeam_seven/study/blob/master/idea/idea%E6%BF%80%E6%B4%BB%E6%95%99%E7%A8%8B.md)
 
-    todo 插件推荐
+    [插件推荐](https://gitee.com/GTeam_seven/study/blob/master/idea/idea%E5%A5%BD%E7%94%A8%E6%8F%92%E4%BB%B6.md)
 
     todo 研究导出setting
 
@@ -88,9 +88,11 @@
 
     [git工具](https://sevenyjl.lanzoui.com/iIgX3qs4sde)
 
-25. [下载神器IDM](https://mirror2.internetdownloadmanager.com/idman638build25.exe?b=1&filename=idman638build25.exe)
+24. [下载神器IDM](https://mirror2.internetdownloadmanager.com/idman638build25.exe?b=1&filename=idman638build25.exe)
 
     [破解教程](https://sevenyjl.lanzoui.com/icUBVqwod6b)
+
+    备用网站：http://idman.ys168.com/
 
 26. [PotPlayer播放器](https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe)
 
@@ -111,6 +113,12 @@
 31. [Tomcat9](https://ftp.kddi-research.jp/infosystems/apache/tomcat/tomcat-9/v9.0.50/bin/apache-tomcat-9.0.50.zip)
 
 32. [win原镜像下载](https://www.xitongku.com/index.html)
+
+33. 文档下载器
+
+    - [文库下载器](https://sevenyjl.lanzoui.com/ikhfdrn38wd)
+
+34. 
 
 > 参考链接：https://www.52pojie.cn/forum.php?mod=collection&action=view&ctid=2124
 
