--- a/数据结构与算法/leetcode/算法刷题.md
+++ b/数据结构与算法/leetcode/算法刷题.md
@@ -366,6 +366,60 @@ public int reverse(int x) {
 
 <video src="./算法刷题图片/视频/15.mp4"></video>
 
+```java
+/**
+     * 2021/7/20 16:30
+     * 暴力会超时
+     * @param nums
+     * @return
+     */    
+public static List<List<Integer>> threeSum(int[] nums) {
+        HashSet<List<Integer>> lists = new HashSet<>();
+        for (int i = 0; i < nums.length; i++) {
+            for (int j = i + 1; j < nums.length; j++) {
+                for (int k = j + 1; k < nums.length; k++) {
+                    if (nums[i] + nums[j] + nums[k] == 0) {
+                        lists.add(Arrays.asList(nums[i], nums[j], nums[k]).stream().sorted().collect(Collectors.toList()));
+                    }
+                }
+            }
+        }
+        return new ArrayList<>(lists);
+    }
+```
+
+## 16.最接近的三数之和:heavy_check_mark:
+
+```java
+    /**
+     * 解答成功: 执行耗时:123 ms,击败了7.29% 的Java用户 内存消耗:38.1 MB,击败了60.82% 的Java用户
+     * @param nums
+     * @param target
+     * @return
+     */
+public static int threeSumClosest(int[] nums, int target) {
+        int count;
+        if (target >= 0) {
+            count = Integer.MAX_VALUE;
+        } else {
+            count = Integer.MIN_VALUE;
+        }
+        for (int i = 0; i < nums.length; i++) {
+            for (int j = i + 1; j < nums.length; j++) {
+                for (int k = j + 1; k < nums.length; k++) {
+                    int sum = nums[i] + nums[j] + nums[k];
+                    System.out.println(nums[i] + "+" + nums[j] + "+" + nums[k] + "=" + sum);
+                    System.out.println("|" + sum + "-" + target + "|=" + Math.abs(sum - target) + "<" + "|" + count + "-" + target + "|=" + Math.abs(count - target));
+                    count = Math.abs(sum - target) < Math.abs(count - target) ? sum : count;
+                }
+            }
+        }
+        return count;
+    }
+```
+
+17.
+
 # 剑指 Offer
 
 ## 剑指 Offer 05. 替换空格:heavy_check_mark:
