--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -118,7 +118,9 @@
 
     - [文库下载器](https://sevenyjl.lanzoui.com/ikhfdrn38wd)
 
-34. 
+34. [超好用便签神器](https://www.simplestickynotes.com/?hl=ch&utm_source=ssn)
+
+35. 
 
 > 参考链接：https://www.52pojie.cn/forum.php?mod=collection&action=view&ctid=2124
 
