修复失效链接

--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -2,7 +2,7 @@
 
 2. [Typora MD编辑](https://typora.io/windows/typora-setup-x64.exe?)
 
-2. [ditto剪贴板](ditto剪)
+2. [ditto剪贴板](https://ditto-cp.sourceforge.io/)
 
 3. [q-dir文件夹管理](http://www.softwareok.com/Download/Q-Dir_Installer_x64.zip)
 
@@ -48,7 +48,7 @@
 
 14. [Geek Uninstall](https://crystalidea.com/downloads/uninstalltool_setup.exe)
 
-    [破解](https://sevenyjl.lanzoui.com/iFVudr4qvib)
+    直接下载[破解](https://sevenyjl.lanzoui.com/iFVudr4qvib)
 
 15. [bandzip](https://dl.bandisoft.com/bandizip.std/BANDIZIP-SETUP-STD-X64.EXE?1)
 
@@ -100,7 +100,7 @@
 
     许可证
 
-    https://sevenyjl.lanzoui.com/igLtfqsrech
+    （失效了）https://sevenyjl.lanzoui.com/igLtfqsrech
 
 28. [Lively Wallpaper](https://rocksdanister.github.io/lively/)
 
