更新个人简历

--- a/简历文档/个人简历.md
+++ b/简历文档/个人简历.md
@@ -4,7 +4,6 @@
 - 性别：男    					           电话：15114072042
 - 毕业院校：沈阳化工大学        学历：本科
 - 应聘岗位：Java开发相关岗位
-- [个人笔记](https://github.com/sevenyjl/study)
 
 # 专业技能
 
@@ -37,11 +36,11 @@
 
 **项目技术**：Spring Cloud、Mybatis、Postgresql、nacos
 
-数据库设计：![Diagram 1](G:\study\简历文档\个人简历.assets\Diagram 1.jpg)
+数据库设计：![Diagram 1](.\个人简历.assets\Diagram 1.jpg)
 
 项目效果图：
 
-![image-20210625215242985](G:\study\简历文档\个人简历.assets\image-20210625215242985.png)
+![image-20210625215242985](.\个人简历.assets\image-20210625215242985.png)
 
 ### **项目名称**：图数据库软件
 
@@ -60,7 +59,7 @@
 
 项目效果图:
 
-![image-20210625223054211](G:\study\简历文档\个人简历.assets\image-20210625223054211.png)![image-20210625224937641](G:\study\简历文档\个人简历.assets\image-20210625224937641.png)
+![image-20210625223054211](.\个人简历.assets\image-20210625223054211.png)![image-20210625224937641](.\个人简历.assets\image-20210625224937641.png)
 
 ### 项目名称：知识图谱
 
@@ -80,11 +79,11 @@
 
 项目效果图:
 
-![image-20210625230105961](G:\study\简历文档\个人简历.assets\image-20210625230105961.png)
+![image-20210625230105961](.\个人简历.assets\image-20210625230105961.png)
 
-![image-20210625230554343](G:\study\简历文档\个人简历.assets\image-20210625230554343.png)
+![image-20210625230554343](.\个人简历.assets\image-20210625230554343.png)
 
-![image-20210625230746524](G:\study\简历文档\个人简历.assets\image-20210625230746524.png)
+![image-20210625230746524](.\个人简历.assets\image-20210625230746524.png)
 
 
 
