for foreach stream 性能比较

--- a/简历文档/问题.md
+++ b/简历文档/问题.md
@@ -42,6 +42,8 @@
      - Java 注解
      - Java API
 
+   ![image-20210727143821927](问题.assets/Springinitdestory-a14f2929.png)
+
    spring生命周期参考：http://www.justdojava.com/2019/11/17/spring-init/
 
 5. Spring中的IOC是具体如何实现的？
@@ -87,5 +89,7 @@
 7. SpringAop是什么，声明式事务注解能说一下吗？还有那些事务？
 
    Aop就是面向切面编程，通过反射方式增强代码，而不改变原来的流程逻辑
+
+   spring中有编程式事务和声明式事务两种
 
 8. 
